--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,20 @@ html {
 }
 
 :root {
+
+  /* Blues */
   --darkest-blue: #1b262c;
   --dark-blue: #0f4c75;
   --high-blue: #3282b8;
   --old-skyblue: #bbe1fa;
   --sky-blue: #99E1FA;
+  /* Greys */
   --just-white: #fff;
   --grey-chill: #C9C9C9;
-
-  --purple: #c0ffb3;
-  --purple-blue: #222831;
-  --blue-fantasy: #eeeeee;
-  --blue-clear: #393e46;
+  --purple: #f3f9fb;
+  --darkest-grey: #222831;
+  --clean-grey: #eeeeee;
+  --medium-grey: #393e46;
 
 }
 
@@ -64,6 +66,15 @@ header {
   text-align: end;
 }
 
+.cite-container {
+  background-color: white;
+  padding: 6px;
+  border-radius: 5px;
+}
+ .CTA-text{
+   text-align: center;
+ }
+
 .header--imgContainer {
   position: relative;
   left: 10px;
@@ -71,7 +82,7 @@ header {
   justify-content: center;
   width: 25vw;
   height: 25vw;
-  border: 2px solid var(--purple-blue) ;
+  border: 2px solid var(--darkest-grey) ;
   border-radius: 50%;
   margin-top: 0;
   margin-bottom: 0;
@@ -94,7 +105,7 @@ header {
   border-radius: 9px;
   font-size: 1.4rem;
   font-weight: 600;
-  color: var(--darkest-blue);
+  color: var(--darkest-grey);
   text-decoration: none;
   vertical-align: text-top; 
 }
@@ -158,7 +169,7 @@ ul {
 }
 
 .projects {
-  background-color: var(--purple-blue);
+  background-color: var(--darkest-grey);
   height: auto;
   color: white;    
 }
@@ -216,7 +227,7 @@ ul {
 /* CONTACTO */
 
 .contact {
-  background-color: var(--blue-fantasy);
+  background-color: var(--clean-grey);
   height: auto;
 }
 
@@ -259,7 +270,7 @@ footer {
   display: flex;
   align-items: center;
   padding: 1rem;
-  background-color: var(--blue-clear);
+  background-color: var(--medium-grey);
 
 }
 
