cambie el color del header

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ html {
   /* Greys */
   --just-white: #fff;
   --grey-chill: #C9C9C9;
-  --purple: #f3f9fb;
+  --purple: #f4f4f2;
   --darkest-grey: #222831;
   --clean-grey: #eeeeee;
   --medium-grey: #393e46;
