--- a/css/desktop.css
+++ b/css/desktop.css
@@ -6,6 +6,13 @@ h2 {
 h5 {
   font-size: 3rem;
 }
+.header--text-container{
+  font-size: 2.2rem;
+  line-height: 4rem;
+}
+.cite-container {
+  padding: 20px;
+}
 
 .projects {
   padding-bottom: 70px;
