--- a/css/style.css
+++ b/css/style.css
@@ -35,53 +35,78 @@ header {
   flex-wrap: wrap;
   align-items: center;
   background-color: var(--white-special);
+  
 }
 
+
+
 .header--header-container {
-  display: flex;
+  /* display: flex; */
+  display: grid;
+  grid-template-columns: 1.15fr 1.85fr;
+  align-self: flex-end;
+  /* grid-template-rows: 2fr 1fr;
+  grid-template-areas:  "img text"
+                        "presentation text"; */
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-end;
   padding-top: 20px;
   height: auto;  
+}
+
+.hero-container {
+  justify-self: center;
+  border: 1px solid var(--darkest-grey);
+  padding: 8px;
+  border-radius: 5px;
+  background-color: white;
 }
 
 .header--text-container {   
   font-size: 1rem;
   max-width: 50vw;
-  margin: 6vh;
-  margin-left: 10vw;
+  margin: 25px;
   margin-top: 0vh; 
   margin-bottom: 0.2rem;
   padding: 5px;
-  padding-right: 0;
+  padding-bottom: 5px;
   text-align: justify;
-  line-height: 1.1rem;
+  line-height: 1.1em;
+  align-self: flex-start;
 }
 
 .header--text-container .cite {
   position: relative;
+  grid-area: text;
   font-style: italic;
-  font-size: 0.7rem;
+  font-size: 0.7em;
   margin: 0;
   text-align: end;
 }
 
 .cite-container {
   background-color: white;
-  padding: 6px;
+  padding: 14px 12px;
+  margin-bottom: 5px;
   border-radius: 5px;
+  align-self: flex-start;
 }
  .CTA-text{
    text-align: center;
+   font-weight: bold;
  }
 
 .header--imgContainer {
-  position: relative;
-  left: 10px;
+  /* position: relative;
+  left: 10px; */
+  grid-area: img;
+  justify-self: right;
   display: flex;
   justify-content: center;
   width: 25vw;
   height: 25vw;
+  max-width: 200px;
+  max-height: 200px;
   border: 2px solid var(--darkest-grey) ;
   border-radius: 50%;
   margin-top: 0;
@@ -92,7 +117,23 @@ header {
   background-repeat: no-repeat 
 }
 
-.header--button{
+.header--presentation {
+  grid-area: presentation;
+  justify-self: right;
+  padding: 10px;
+  padding-bottom: 0;
+}
+.header--presentation h3 {
+  margin-bottom: 2px;
+  text-align: center;
+}
+
+.header--presentation p {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.header--button {
   position: relative;
   bottom: -20px;
   display: flex;
@@ -103,6 +144,8 @@ header {
   height: 40px;
   padding: 8px;
   border-radius: 9px;
+  -webkit-box-shadow: 0px 3px 37px -5px rgba(0,0,0,0.87); 
+  box-shadow: 0px 3px 37px -5px rgba(0,0,0,0.87);
   font-size: 1.4rem;
   font-weight: 600;
   color: var(--darkest-grey);
@@ -214,7 +257,8 @@ ul {
   width: 500px;
   /* border-radius: 9px; */
   border: none;
-  box-shadow: 2px 2px 3px rgba(89, 73, 30, 0.16);
+  -webkit-box-shadow: 0px 3px 25px 2px rgba(0,0,0,0.69); 
+  box-shadow: 0px 3px 25px 2px rgba(0,0,0,0.69);
   background-color:var(--grey-chill);
   font-family: 'DM Sans', sans-serif;
   font-size: 1.4rem;
