--- a/css/tablet.css
+++ b/css/tablet.css
@@ -14,6 +14,12 @@ header {
   width: 2.6rem;
   margin-bottom: 8px;
 }
+.header--text-container{
+  font-size: 1.6rem;
+}
+.cite-container {
+  padding: 15px;
+}
 
 .projects {
   display: flex;
